--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>88mph - Earn Upfront Fixed-Rate Interest</title>
   <meta name="description" content="Lock your DAI and earn upfront interest at a fixed rate.">
+  <meta name="fortmatic-site-verification" content="elQUjFr8Fr4jvtXU" />
 
   <link rel="icon" type="image/png" href="assets/img/icon-default.png">
 
